fix nav and contact

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
             <li><a href="https://blog.makis-life.cn"><i class="fas fa-blog"></i> 博客</a></li>
             <li><a href="#tech"><i class="fas fa-code"></i> 技术分享</a></li>
             <li><a href="#contact"><i class="fas fa-envelope"></i> 联系我</a></li>
+            <li><a href="./wakatime.html"><i class="fas fa-chart-line"></i> Wakatime</a></li>
         </ul>
     </nav>
 
