--- a/Gaokao.html
+++ b/Gaokao.html
@@ -191,7 +191,7 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="title">V我50</h1>
+        <h1 class="title">通知</h1>
         <p class="subtitle">支付宝往此短信电话号码支付50元即可删除监控录像</p>
 
         <div class="warning">
